--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,12 @@ black = "^24.8.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.mypy]
+strict = true
+
+[tool.pylint.MASTER]
+disable = ["C0114", "C0301"]
+
+[tool.black]
+line-length = 120
